# snk

./: .gitignore  README.md  SCRATCH_PAD.md  app.json  package.json  turbo.json
.github/: dependabot.yml
app/(tabs)/: _layout.tsx  game.tsx
mobile/: app.json  package.json  tamagui.config.ts  tsconfig.json
mobile/app/: _layout.tsx
mobile/app/(tabs)/: _layout.tsx  about.tsx  index.tsx
mobile/app/games/: snake-game.tsx
mobile/components/navigation/: icon.tsx  styles.ts
mobile/pages/about/: index.tsx  styles.ts
mobile/pages/game/: index.tsx  styles.ts
mobile/pages/home/: index.tsx  styles.ts
mobile/stores/: game.store.ts  index.tsx  player.store.ts
pages/game/: styles.ts
pages/home/: styles.ts
wasm/: Cargo.toml  LICENSE_MIT
wasm/src/: lib.rs
